--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9288770962100185"
-    crossorigin="anonymous"></script>
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9288770962100185"
+    crossorigin="anonymous"></script> -->
   <meta charset="UTF-8">
   <title>Online Unit Converter - Length, Weight, Temperature, Time, Speed</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -141,7 +141,7 @@
 
   <!-- Google AdSense (Footer Section) -->
   <section>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9288770962100185"
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9288770962100185"
             crossorigin="anonymous"></script>
     <ins class="adsbygoogle"
         style="display:block"
@@ -151,7 +151,7 @@
         data-full-width-responsive="true"></ins>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    </script> -->
   </section>
 
   <script>
